fix: address PR #8 review comments (TMI logic, typing, and typo)

--- a/docs/stories/2.5.3-comparateur-fiscal.md
+++ b/docs/stories/2.5.3-comparateur-fiscal.md
@@ -23,7 +23,7 @@ Status: done
     - Cashflow net annuel moyen
     - Rentabilité nette-nette
 3. [x] **Mise en évidence du régime optimal** via un badge "Conseillé" ou "Optimal" basé sur le meilleur cashflow net.
-4. [x] **Tooltips pédagogiques** expliquant brièvement les avantages/inconvénients de chaque régime. (Implémenté via Descriptions/Badges dans FiscalComparator)
+4. [x] **Tooltips pédagogiques** expliquant brièvement les avantages/inconvénients de chaque régime. (Implémentés via Descriptions/Badges dans FiscalComparator)
 5. [x] **Intégration responsive** : le tableau doit être lisible sur mobile (scroll horizontal ou empilement).
 6. [x] **Précision HCSF (Refinement)** : Possibilité de saisir les revenus réels pour un calcul d'endettement exact en Nom Propre.
 
