Retour review PR et mise à jour docs stories et epics

--- a/docs/stories/S5.3.comparaison-regimes-fiscaux.md
+++ b/docs/stories/S5.3.comparaison-regimes-fiscaux.md
@@ -3,24 +3,24 @@
 **ID** : S5.3  
 **Titre** : Comparateur de régimes côte à côte  
 **Priorité** : P1  
-**Statut** : ⏳ À FAIRE (Prévu Sprint 5 Suite)
+**Statut** : ✅ TERMINÉ (Intégré Janv 2026)
 
 ## 1. Objectif
 Permettre à l'investisseur de comparer instantanément l'impact de différents régimes fiscaux (LMNP Réel, Micro-BIC, SCI IS, etc.) sur le même bien afin de choisir la stratégie la plus rentable.
 
 ## 2. Critères d'acceptation
-- [ ] Affichage d'un tableau comparatif des 5 régimes principaux :
+- [x] Affichage d'un tableau comparatif des 5 régimes principaux :
     - Location nue (Micro-foncier)
     - Location nue (Foncier réel)
     - LMNP (Micro-BIC)
     - LMNP (Réel)
-    - SCI à l'IS
-- [ ] Comparaison sur 3 indicateurs clés :
+    - SCI à l'IS (Capitalisation & Distribution)
+- [x] Comparaison sur 3 indicateurs clés :
     - Impôt moyen annuel (sur 10 ans)
     - Cashflow net annuel moyen
     - Rentabilité nette-nette
-- [ ] Mise en évidence (badge "Optimal") du régime offrant le meilleur cashflow net.
-- [ ] Tooltip pédagogique expliquant pourquoi un régime est plus avantageux qu'un autre dans le cas présent.
+- [x] Mise en évidence (badge "Optimal") du régime offrant le meilleur cashflow net.
+- [x] Tooltip pédagogique expliquant pourquoi un régime est plus avantageux qu'un autre dans le cas présent.
 
 ## 3. Impact technique
 - **Frontend** : Création d'un nouveau composant `FiscalComparator` dans la page de résultats.
