--- a/docs/stories/S5.4.optimisation-sci-is.md
+++ b/docs/stories/S5.4.optimisation-sci-is.md
@@ -12,6 +12,7 @@ Fiabiliser l'estimation fiscale en déduisant les intérêts d'emprunt et l'assu
 - [x] Pour le régime **SCI à l'IS**, la base imposable est : Loyer - Charges - Amortissement - Intérêts - Assurance.
 - [x] Pour le régime **LMNP Réel**, même logique de déduction des frais financiers.
 - [x] Pour le **Foncier Réel**, déduction des intérêts et assurance.
+- [x] Implémentation de la Flat Tax (30%) pour la distribution de dividendes en SCI IS.
 
 ## 3. Impact technique
 - `src/server/calculations/fiscalite.ts` : les fonctions de calcul doivent recevoir le montant annuel des intérêts et assurances.
