feat: multi-scenario management, navigation isolation, hydration fixes and header navigation buttons

--- a/docs/stories/2.6.1-multi-scenarios.md
+++ b/docs/stories/2.6.1-multi-scenarios.md
@@ -1,6 +1,6 @@
 # Story 2.6.1: Gestion de plusieurs scénarios (Mémoire vive)
 
-Status: ready-for-dev
+Status: done
 
 ## Story
 
@@ -10,23 +10,23 @@ Status: ready-for-dev
 
 ## Acceptance Criteria
 
-1. [ ] **Multi-scénarios** : Possibilité de gérer jusqu'à 3 scénarios simultanément.
-2. [ ] **Action "Dupliquer"** : Pouvoir créer une copie d'un scénario existant pour tester une variante.
-3. [ ] **Navigation fluide** : Alterner entre les scénarios via des onglets (Tabs) sur la page de résultats.
-4. [ ] **Nommage** : Chaque scénario peut être renommé (ex: "Scénario A", "Négociation -10%").
-5. [ ] **Isolation des données** : Les modifications dans le formulaire ne s'appliquent qu'au scénario actif.
-6. [ ] **Volatilité** : Les données sont conservées dans le state Zustand mais ne sont pas persistées en DB/LocalStorage (hors scope).
+1. [x] **Multi-scénarios** : Possibilité de gérer jusqu'à 3 scénarios simultanément.
+2. [x] **Action "Dupliquer"** : Pouvoir créer une copie d'un scénario existant pour tester une variante.
+3. [x] **Navigation fluide** : Alterner entre les scénarios via des onglets (Tabs) sur la page de résultats.
+4. [x] **Nommage** : Chaque scénario peut être renommé (ex: "Scénario A", "Négociation -10%").
+5. [x] **Isolation des données** : Les modifications dans le formulaire ne s'appliquent qu'au scénario actif.
+6. [x] **Volatilité** : Les données sont conservées dans le state Zustand mais ne sont pas persistées en DB/LocalStorage (hors scope).
 
 ## Tasks / Subtasks
 
-- [ ] **Task 1: Adaptation du Zustand Store** (AC: 1, 5, 6)
-  - [ ] Modifier `src/stores/calculateur.store.ts` pour stocker une liste de scénarios au lieu d'un objet unique.
-  - [ ] Ajouter `activeScenarioIndex` pour suivre le scénario en cours d'édition.
-  - [ ] Mettre à jour les setters pour qu'ils ciblent le scénario actif.
-- [ ] **Task 2: UI de gestion des scénarios** (AC: 2, 3, 4)
-  - [ ] Ajouter un composant `ScenarioTabs` dans le header ou au-dessus des résultats.
-  - [ ] Implémenter le bouton "Ajouter/Dupliquer" et l'option "Renommer".
-  - [ ] Gérer la suppression d'un scénario (avec confirmation).
+- [x] **Task 1: Adaptation du Zustand Store** (AC: 1, 5, 6)
+  - [x] Modifier `src/stores/calculateur.store.ts` pour stocker une liste de scénarios au lieu d'un objet unique.
+  - [x] Ajouter `activeScenarioId` pour suivre le scénario en cours d'édition.
+  - [x] Mettre à jour les setters pour qu'ils ciblent le scénario actif.
+- [x] **Task 2: UI de gestion des scénarios** (AC: 2, 3, 4)
+  - [x] Ajouter un composant `ScenarioTabs` dans le header ou au-dessus des résultats.
+  - [x] Implémenter le bouton "Ajouter/Dupliquer" et l'option "Renommer".
+  - [x] Gérer la suppression d'un scénario (avec confirmation).
 
 ## Dev Notes
 
@@ -50,8 +50,25 @@ Status: ready-for-dev
 ## Dev Agent Record
 
 ### Agent Model Used
-Antigravity (Google Deepmind)
+James (Antigravity Persona)
+
+### Debug Log References
+- Store refactored to support `Scenario[]`.
+- Fixed multiple build errors in form steps using `getActiveScenario()`.
+- Successfully ran `npm run build`.
 
 ### Completion Notes List
-- Detailed guide for multi-scenario logic in Zustand.
-- Focus on memory-only persistence (volatility).
+- Multi-scenario logic implemented in Zustand.
+- Isolation verified between tabs.
+- Added `uuid` dependency for unique scenario IDs.
+- UX: Tabs integrated in both Form and Results views.
+
+### File List
+- `src/stores/calculateur.store.ts`
+- `src/types/calculateur.ts`
+- `src/components/results/ScenarioTabs.tsx`
+- `src/components/results/Dashboard.tsx`
+- `src/components/forms/FormWizard.tsx` (and all Step components)
+
+### Change Log
+- 2026-01-30: Initial implementation of multi-scenario logic and UI.
